<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">卡片闹钟</string>
	<string name="init_name">闹钟##</string>
	<string name="not_save">未保存</string>
	<string name="help">帮助</string>
	<string name="repeat">每周重复</string>
	<string name="remain_time_dh">剩余##天**小时</string>
	<string name="remain_time_hm">剩余##小时**分钟</string>
	<string name="toast_show_remain_time_dh">闹钟将在##天**小时后叫醒您</string>
	<string name="toast_show_remain_time_hm">闹钟将在##小时**分钟后叫醒您</string>
	<string name="monday">一</string>
	<string name="tuesday">二</string>
	<string name="wednesday">三</string>
	<string name="thursday">四</string>
	<string name="friday">五</string>
	<string name="saturday">六</string>
	<string name="sunday">日</string>
	<string name="sound_way">响铃</string>
	<string name="shake_way">震动</string>
	<string name="init_encourage_words">起床！加油!</string>
	<string name="init_wake_music_words">请设置闹钟铃声</string>
	<string name="dialog_yes">确定</string>
	<string name="dialog_no">取消</string>
	<string name="has_save">已保存</string>
	<string name="today">今天</string>
	<string name="tomorrow">明天</string>
	<string name="get_text_word">给自己一点激励！</string>
	<string name="music_select_no_file">暂无文件</string>
	<string name="music_select_ask_action">请选择一个音乐文件</string>
	<string name="music_select_header_text">##个文件</string>
	<string name="alarm_wake_again">闹钟将在##分钟后再响</string>
	<string name="wake_up_drag_word">甩出去关掉闹钟</string>
	<string name="notification_ticker">闹钟已停止</string>
	<string name="notification_text">##的“**”已停止</string>
	<string name="instuction_next_word">下一步</string>
	<string name="instruction_finish_word">完成</string>

	<string-array name="instruction_show_words">
		<item>进入应用将创建一个新闹钟</item>
		<item>点击修改时间</item>
		<item>左右滑动启动闹钟并退出</item>
		<item>上下滑动进入闹钟列表</item>
		<item>按住闹钟上下拉动可删除闹钟</item>
		<item>闹钟响时可把闹钟“甩出去”</item>
	</string-array>
	<string-array name="this_week">
		<item>本周一</item>
		<item>本周二</item>
		<item>本周三</item>
		<item>本周四</item>
		<item>本周五</item>
		<item>本周六</item>
		<item>本周日</item>
	</string-array>
	<string-array name="next_week">
		<item>下周一</item>
		<item>下周二</item>
		<item>下周三</item>
		<item>下周四</item>
		<item>下周五</item>
		<item>下周六</item>
		<item>下周日</item>
	</string-array>
	<string-array name="wake_show_day">
		<item>周日</item>
		<item>周一</item>
		<item>周二</item>
		<item>周三</item>
		<item>周四</item>
		<item>周五</item>
		<item>周六</item>
	</string-array>
	<string-array name="exit_words1">
		<item>保</item>
		<item>存</item>
		<item>并</item>
		<item>退</item>
		<item>出</item>
	</string-array>
	<string-array name="exit_words2">
		<item>退</item>
		<item>出</item>
		<item>并</item>
		<item>保</item>
		<item>存</item>
	</string-array>

	<!-- input -->
	<string name="input0">0</string>
	<string name="input1">1</string>
	<string name="input2">2</string>
	<string name="input3">3</string>
	<string name="input4">4</string>
	<string name="input5">5</string>
	<string name="input6">6</string>
	<string name="input7">7</string>
	<string name="input8">8</string>
	<string name="input9">9</string>
	<string name="input_back">back</string>
	<string name="input_done">done</string>
	<string name="tag0">0</string>
	<string name="tag1">1</string>
	<string name="tag2">2</string>
	<string name="tag3">3</string>
	<string name="tag4">4</string>
	<string name="tag5">5</string>
	<string name="tag6">6</string>
	<string name="tag7">7</string>
	<string name="tag8">8</string>
	<string name="tag9">9</string>
	<string name="tag_back">b</string>
	<string name="tag_done">d</string>
	<string name="title_activity_alarm_wake">AlarmWakeActivity</string>
	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>
	<string name="title_activity_get_text">GetTextActivity</string>
	<string name="title_activity_help">HelpActivity</string>
	<string name="title_activity_music_select">MusicSelectActivity</string>
	<string name="title_activity_wake_test">WakeTestActivity</string>

</resources>