<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/init_name" />

        <Button
            android:id="@+id/rename_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:background="@drawable/ic_launcher" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal" >

            <TextView
                android:id="@+id/hour_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="07"
                android:textSize="80sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="80sp" />

            <TextView
                android:id="@+id/minute_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15"
                android:textSize="80sp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/repeat_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@android:color/transparent"
                android:text="@string/repeat" />

            <TextView
                android:id="@+id/remain_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/remain_time" />
        </FrameLayout>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/mon_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/monday" />

            <CheckBox
                android:id="@+id/tue_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/tuesday" />

            <CheckBox
                android:id="@+id/wed_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/wednesday" />

            <CheckBox
                android:id="@+id/thu_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/thursday" />

            <CheckBox
                android:id="@+id/fri_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/friday" />

            <CheckBox
                android:id="@+id/sat_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/saturday" />

            <CheckBox
                android:id="@+id/sun_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/sunday" />
        </TableRow>
    </TableLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/wake_way_bt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/sound_way_bt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sound_way" />

                    <Button
                        android:id="@+id/shake_way_bt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shake_way" />

                    <Button
                        android:id="@+id/wake_again_bt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wake_again" />
                </LinearLayout>

                <TextView
                    android:id="@+id/wake_music_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="TextView" />
            </FrameLayout>

            <TextView
                android:id="@+id/encourage_words_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/init_encourage_words" />

            <Button
                android:id="@+id/media_add_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="+" />
        </LinearLayout>
    </FrameLayout>

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CheckBox" />

</LinearLayout>